# suyu

./: .gitignore  Cargo.toml  LICENSE  README.md  settings.toml  suyu.toml
etc/: devnotes.md
src/: app.rs  main.rs  model.rs  text_format.rs
src/app/: actions.rs  command_palette.rs  doc_ops.rs  geometry.rs  help.rs  interaction.rs  mod.rs  render.rs  settings.rs  svg.rs  update.rs
